# firebase-auth-rest-py

./: .gitignore  LICENSE.md  README.md  pyproject.toml
firebase_auth/: client.py  requests.py  responses.py
